# afro-coin

./: .cirrus.yml  .gitignore  CMakeCache.txt  CMakeLists.txt  CONTRIBUTING.md  COPYING  README.md  SECURITY.md  libbitcoinkernel.pc.in  vcpkg.json
ci/: lint_imagefile  lint_run_all.sh  test_imagefile  test_run_all.sh
cmake/: afrocoin-build-config.h.in  ccache.cmake  cov_tool_wrapper.sh.in  crc32c.cmake  introspection.cmake  leveldb.cmake  minisketch.cmake  tests.cmake
contrib/: README.md  filter-lcov.py  valgrind.supp
depends/: Makefile  README.md  description.md  packages.md  toolchain.cmake.in
doc/: CMakeLists.txt  Doxyfile.in  JSON-RPC-interface.md  README.md  README_doxygen.md  README_windows.txt  REST-interface.md  assets-attribution.md  assumeutxo.md  benchmarking.md  bips.md  bitcoin-conf.md  build-freebsd.md  build-netbsd.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows-msvc.md  build-windows.md  cjdns.md  dependencies.md  descriptors.md  developer-notes.md  dnsseed-policy.md  external-signer.md  files.md  fuzzing.md  guix.md  i2p.md  init.md  managing-wallets.md  multiprocess.md  multisig-tutorial.md  offline-signing-tutorial.md  p2p-bad-ports.md  productivity.md  psbt.md  reduce-memory.md  reduce-traffic.md  release-notes-empty-template.md  (+6 more)
nbproject/: configurations.xml  project.xml
src/qt/test/: CMakeLists.txt  addressbooktests.cpp  addressbooktests.h  apptests.cpp  apptests.h  optiontests.cpp  optiontests.h  rpcnestedtests.cpp  rpcnestedtests.h  test_main.cpp  uritests.cpp  uritests.h  util.cpp  util.h  wallettests.cpp  wallettests.h
(+1711 files in other folders)
